[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gatus-api"
version = "1.0.0"
description = "An asynchronous Python client for the Gatus API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "@TN-1", email = "hamish@hamishwest.xyz" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gatus_api"]
